# turbidostat

./: README.md
analysis/online/: README.md  analysis-turbidostat.R  analyze-run.sh  copy-run.sh  sync-runs.sh
design/circuit/: band-single-feather-bom-order-x3.txt  band-single-feather-bom-order.txt  band-single-feather-bom.csv  band-single-feather.brd  band-single-feather.sch
design/firmware/: controller.h  controller.ino  firmware.ino  hardware.h  manual.h  manual.ino  nephelometer.h  nephelometer.ino  pump.h  pump.ino  settings.h  settings.ino  supervisor.h  supervisor.ino  turbidobase.h  turbidobase.ino  turbidoconc.h  turbidoconc.ino  turbidomix.h  turbidomix.ino  turbidoschedule.h  turbidoschedule.ino  turbidostat.h  turbidostat.ino
design/housing/: 250 ml band v9.f3d  250-ml-band.stl  500 ml band v12.f3d  (+5 more)
doc/: README.md  cleanup.md  construction-electronics.md  construction-fluidics.md  construction-housing.md  construction-pump.md  construction.md  media-fill.md  operation.md  sterilization.md  turbidostat.md
docs/: _config.yml  cleanup.md  construction-electronics.md  construction-fluidics.md  construction-housing.md  construction-pump.md  construction.md  index.html  index.md  media-fill.md  operation.md  sterilization.md  turbidostat.md
mcgeachy-2018/cyh2/: Cargo.toml
mcgeachy-2018/cyh2/src/: fastq_pair.rs  lib.rs
mcgeachy-2018/cyh2/src/bc-align/: main.rs
mcgeachy-2018/cyh2/src/bc-count/: main.rs
mcgeachy-2018/cyh2/src/bc-pileup/: aln_pos.rs  cov_stats.rs  main.rs  mutn.rs  offset_vector.rs  trl.rs
mcgeachy-2018/cyh2/src/bc-seqs/: main.rs
(+60 files in other folders)
